vlib/v/checker/tests/function_missing_return_type.out
vlib/v/checker/tests/function_missing_return_type.vv:1:1: error: missing return at end of function `h`
    1 | fn h() int {
      | ~~~~~~~~~~
    2 | }
    3 |
vlib/v/checker/tests/function_missing_return_type.vv:14:11: error: `s` cannot be referenced outside `unsafe` blocks as it might be stored on stack. Consider declaring `Abc` as `[heap]`.
   12 | fn (s Abc) abc() &int {
   13 |     if true {
   14 |         return &s.x
      |                 ^
   15 |     }
   16 |     s.panic(@FN)
vlib/v/checker/tests/function_missing_return_type.vv:12:1: error: missing return at end of function `abc`
   10 | }
   11 | 
   12 | fn (s Abc) abc() &int {
      | ~~~~~~~~~~~~~~~~~~~~~
   13 |     if true {
   14 |         return &s.x
